# PyCuda-Accelerate

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  publish.yml
conda/: meta.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api.rst  conf.py  index.rst
python/: bindings.cpp
python/pycuda_accelerate/: __init__.py  _core.pyi
src/: CMakeLists.txt  algorithms.h
src/algorithms/: matmul.cu  reduce.cu  scan.cu  sort.cu
src/utils/: cuda_check.h  timer.h
tests/: conftest.py  test_matmul.py  test_reduce.py  test_scan.py  test_sort.py
