[build-system]
requires = [
  "scikit-build-core>=0.8",
  "pybind11>=2.12",
  "setuptools-scm>=8"
]
build-backend = "scikit_build_core.build"

[project]
name = "pycuda-accelerate"
dynamic = ["version"]
description = "GPU-accelerated algorithms for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = ["numpy>=1.24"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-benchmark>=4.0",
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "breathe>=4.35"
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/pycuda_accelerate"]
sdist.include = ["src/**", "cmake/**", "python/**", "tests/**", "docs/**", "CMakeLists.txt"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "75;80;86;89;90"

[tool.setuptools_scm]
write_to = "python/pycuda_accelerate/_version.py"
fallback_version = "0.1.0"
